--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Заголовок документа. Тут пишем мета-теги(для браузера) и так же подключаются стили/иконки/манифесты -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Заголовок сайта -->
     <title>Example</title>
+    <!-- Подключение стилей -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Карказ сайта. Тут пишим все другие теги -->
+    
+    <!-- Заголовок 1 уровня. Их всего 6 -->
     <h1 class="zagolovok">Hello World!</h1>
+    
+    <!-- параграф -->
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Est omnis nobis quod ipsa sunt eius doloribus ex quibusdam animi praesentium.
     </p>
+
+    <!-- блок с элементами -->
     <div class="example_block">
+        <!-- Выделение одного слова или предложения внутри параграфа или других местах -->
         <span>Слово 1</span>
         <span>Слово 2</span>
-        <span>Слово 3</span>
+        <!-- <span>Слово 3</span> -->
     </div>
     <div class="example_block1">
         <span>Слово 1</span>
@@ -29,7 +40,11 @@
     </div>
     <div class="example_block3" id="id1">
         <span>dsadasda</span>
+
+        <!-- Тег ссылки -->
         <a href="#base1" target="_blank">Ссылка</a>
+
+
     </div>
 </body>
 </html>
